# ContextWeave

./: .coverage  .gitignore  AGENTS.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PHASE3_PROGRESS.md  README.md  Skills.md  TODO.md  _batch_test.py  pyproject.toml
.agent-context/: bottleneck-2026-02-04.json  bottleneck-2026-02-04.txt  config.json  context-100.md  state.json
.github/: copilot-instructions.md
.github/agents/: devops-engineer.agent.md
.github/hooks/: commit-msg  install-hooks.sh  post-merge  pre-commit  pre-commit.ps1  pre-push
.github/instructions/: api.instructions.md  csharp.instructions.md  python.instructions.md  react.instructions.md
.github/pages/: dashboard.js  index.html
.github/scripts/: analyze-learning.py  detect-bottlenecks.py  detect-stuck-issues.py  update-instructions.py  validate-alignment.sh  validate-handoff.sh  validate-task-creation.sh
.github/security/: allowed-commands.json
.github/workflows/: crash-recovery.yml  health-monitoring.yml  learning-loop.yml
context_md/: README.md  __init__.py  cli.py  config.py  dashboard.py  debugmcp.py  memory.py  prompt.py  security.py  state.py  wordmcp.py
context_md.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
context_md/commands/: __init__.py  auth.py  config.py  context.py  dashboard.py  export.py  init.py  issue.py  memory.py  status.py  subagent.py  sync.py  validate.py
context_md/framework/: __init__.py  agents.py  config.py  context_provider.py  middleware.py  orchestrator.py  run.py  thread_store.py  tools.py
context_md/static/: dashboard.css  dashboard.html  dashboard.js
context_weave/: README.md  __init__.py  cli.py  config.py  dashboard.py  memory.py  prompt.py  security.py  state.py
context_weave/commands/: __init__.py  auth.py  config.py  context.py  dashboard.py  doctor.py  export.py  init.py  issue.py  memory.py  start.py  status.py  subagent.py  sync.py  validate.py
docs/: CODE_REVIEW.md  CODE_REVIEW_REPORT.md  GAP_ANALYSIS_REPORT.md  IMPLEMENTATION_COMPLETE.md  LIVE_TEST_REPORT.md  MICROSOFT_AGENT_FRAMEWORK_ANALYSIS.md  NEW_FEATURES_GUIDE.md  dashboard-guide.md  export-feature.md
examples/: prompt_enhancement_demo.py
tests/: test_auth.py  test_config.py  test_context_md.py  test_context_weave.py  test_doctor.py  test_framework_agents.py  test_framework_config.py  test_framework_middleware.py  test_framework_orchestrator.py  test_framework_provider.py  test_framework_run.py  test_framework_thread_store.py  test_framework_tools.py  test_issue.py  test_memory.py  test_prompt.py  test_security.py  test_start.py  test_subagent.py  test_sync.py  test_validate.py
(+29 files in other folders)
